--- a/multifilepicker/src/main/res/values/strings.xml
+++ b/multifilepicker/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="text_loading">Loading ...</string>
     <string name="text_open">Open</string>
     <string name="text_select">Select</string>
+    <string name="text_unselect">Unselect</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
